--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-on-ubuntu:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,10 +21,57 @@ jobs:
       - name: Have github actions build maven project
         run: mvn -B package --file pom.xml
         
-      - name: List the current directory
-        run: ls -a 
+      - name: List all environment variables
+        run: env
         
-      - name: What is in the target folder
-        run: |
-          cd target 
-          ls -a
+#       - name: What is in the target folder
+#         run: |
+#           cd target 
+#           ls -a
+
+  build-on-windows:
+    runs-on: windows-latest
+
+    steps:
+      - name: Step1 - Checkout master branch from github
+        uses: actions/checkout@v2
+
+      - name: Step 2 - Setup jdk 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Have github actions build maven project
+        run: mvn -B package --file pom.xml
+        
+      - name: List all environment variables
+        run: env
+        
+#       - name: What is in the target folder
+#         run: |
+#           cd target 
+#           ls -a
+      
+  build-on-macos:
+    runs-on: macos-latest
+
+    steps:
+      - name: Step1 - Checkout master branch from github
+        uses: actions/checkout@v2
+
+      - name: Step 2 - Setup jdk 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Have github actions build maven project
+        run: mvn -B package --file pom.xml
+        
+      - name: List all environment variables
+        run: env
+        
+        
+#       - name: What is in the target folder
+#         run: |
+#           cd target 
+#           ls -a
